--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -8,7 +8,7 @@
       border: 2px solid $dark-gray;
       background-color: transparent;
       padding: 15px;
-      margin: 10px;
+      margin: 10px auto;
       width: 164px;
       height: 52px;
     }
