--- a/src/components/Product/ProductList/ProductThumbnail/ProductThumbnail.scss
+++ b/src/components/Product/ProductList/ProductThumbnail/ProductThumbnail.scss
@@ -21,7 +21,7 @@
     border: 2px solid black;
     background-color: transparent;
     padding: 5px 10px;
-    margin: 20px;
+    margin: 20px auto;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     border-radius: 0;
